--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -38,6 +38,7 @@
   });
 }(jQuery));
 </script>
+<script type="text/javascript">var $zoho= $zoho || {livedesk:{values:{},ready:function(){$zoho.livedesk.chat.floatingwindow('all');}}};var d=document;s=d.createElement("script");s.type="text/javascript";s.defer=true;s.src="https://salesiq.zoho.com/support.creator3/float.ls?embedname=creator3";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 {% if site.google_analytics %}
 {% include google_analytics.html %}
 {% endif %}
