--- a/css/main.sass
+++ b/css/main.sass
@@ -45,7 +45,7 @@ body
   top: 10px
   width: $rs*3
   height: $rs*3
-  background-color: #000
+  //background-color: #000
   overflow: hidden
   z-index: 99
   .logo
@@ -91,14 +91,14 @@ body
     right: 50%
     margin-right: -$rs*3.75
     background-size: cover
-    border-radius: 50%
+    //border-radius: 50%
     z-index: 99
     text-indent: -9999px
-    border: 3px solid #fff
-    background-color: #fff
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
-    box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+    //border: 3px solid #fff
+    //background-color: #fff
+    //-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+    //-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+    //box-shadow: 0 1px 1px rgba(0,0,0,0.3)
   .blog-title
     margin: 0
     padding: $rs*5.25 $rs $rs/2
